--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,10 @@
-cryptography==3.3.2
-lockfile==0.12.2
-monotonic==1.5
-keyring==22.2.0
-bpython==0.21
-brotli==1.0.9
-contextvars==2.4
-cx_Oracle==8.2.1
-Cython==0.29.24
-docutils==0.17.1
-importlib_metadata==4.6.1
-ipdb==0.13.9
-ipython==7.25.0
-lxml==4.6.3
-numpy==1.21.1
-ordereddict==1.1
+Django==3.2.4
 Pillow==8.3.1
-protobuf==3.17.3
-psycopg2==2.9.1
-pylibmc==1.6.1
-pymemcache==3.5.0
-pyOpenSSL==20.0.1
 python_memcached==1.59
-pywatchman==1.4.1
-PyYAML==5.4.1
-secrets==1.0.2
-tblib==1.7.0
-tornado==6.1
-typing_extensions==3.10.0.0
-zipp==3.5.0
+djangorestframework==3.12.4
+djangorestframework-simplejwt==4.7.1
+feedparser==6.0.8
+mock==4.0.3
+django-cors-headers==3.7.0
+requests==2.25.1
+
