--- a/backend_site/requirements.txt
+++ b/backend_site/requirements.txt
@@ -1,10 +1,20 @@
+asgiref==3.4.1
+certifi==2021.5.30
+chardet==4.0.0
 Django==3.2.4
-Pillow==8.3.1
-python_memcached==1.59
+django-cors-headers==3.7.0
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.7.1
 feedparser==6.0.8
+idna==2.10
 mock==4.0.3
-django-cors-headers==3.7.0
+Pillow==8.3.1
+PyJWT==2.1.0
+python-memcached==1.59
+pytz==2021.1
 requests==2.25.1
-
+sgmllib3k==1.0.0
+six==1.16.0
+sqlparse==0.4.1
+termcolor==1.1.0
+urllib3==1.26.6
